[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/goutte.camera.trackball/trackball_camera.gd" type="Script" id=1]
[ext_resource path="res://scripts/car.gd" type="Script" id=2]
[ext_resource path="res://scripts/wheel.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/dev/dev_black.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/dev/dev_orange.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 5 )

[sub_resource type="CapsuleShape" id=2]
radius = 0.7
height = 2.6

[sub_resource type="SphereShape" id=3]
radius = 0.4

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 4 )

[node name="car" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5, 0 )
input_ray_pickable = false
mass = 1500.0
can_sleep = false
script = ExtResource( 2 )

[node name="TrackballCamera" type="Camera" parent="."]
transform = Transform( -4.37114e-08, 0.258819, -0.965926, 0, 0.965926, 0.258819, 1, 1.13133e-08, -4.2222e-08, -5.2, -0.36797, 0.2 )
script = ExtResource( 1 )
stabilize_horizon = true
friction = 0.17

[node name="mesh" type="CSGBox" parent="."]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, -1.4, 0 )
width = 4.0
height = 1.0
depth = 1.6
material = SubResource( 1 )

[node name="CSGPolygon" type="CSGPolygon" parent="mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0, 0.7 )
polygon = PoolVector2Array( 0, 0.5, -1, 0.5, -0.3, 1, 0.6, 1, 0.9, 0.5 )
depth = 1.4
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.2, 0 )
shape = SubResource( 2 )

[node name="lf_wheel" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.95, -1.60258, -1.15 )
shape = SubResource( 3 )
script = ExtResource( 3 )

[node name="mesh" type="CSGCylinder" parent="lf_wheel"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 3.55271e-15, 0, 0, 0 )
radius = 0.4
height = 0.4
sides = 12
smooth_faces = false
material = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="lf_wheel"]
enabled = true
cast_to = Vector3( 0, 0, 0.41 )

[node name="rf_wheel" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.95, -1.603, -1.15 )
shape = SubResource( 3 )
script = ExtResource( 3 )

[node name="mesh" type="CSGCylinder" parent="rf_wheel"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 3.55271e-15, 0, 0, 0 )
radius = 0.4
height = 0.4
sides = 12
smooth_faces = false
material = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="rf_wheel"]
enabled = true
cast_to = Vector3( 0, 0, 0.41 )

[node name="lr_wheel" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.95, -1.60258, 1.15 )
shape = SubResource( 3 )
script = ExtResource( 3 )

[node name="mesh" type="CSGCylinder" parent="lr_wheel"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0 )
radius = 0.4
height = 0.4
sides = 12
smooth_faces = false
material = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="lr_wheel"]
enabled = true
cast_to = Vector3( 0, 0, 0.41 )

[node name="rr_wheel" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0.95, -1.603, 1.15 )
shape = SubResource( 3 )
script = ExtResource( 3 )

[node name="mesh" type="CSGCylinder" parent="rr_wheel"]
transform = Transform( -4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0 )
radius = 0.4
height = 0.4
sides = 12
smooth_faces = false
material = SubResource( 4 )

[node name="RayCast" type="RayCast" parent="rr_wheel"]
enabled = true
cast_to = Vector3( 0, 0, 0.41 )
